@@ -1,11 +1,14 @@
 
-all: gettoken saytheday youvegothonks
+all: gettoken saytheday sprayandpray youvegothonks
 
 gettoken: gettoken.go
 	go build gettoken.go
 
 saytheday: saytheday.go
 	go build saytheday.go
+
+sprayandpray: sprayandpray.go
+	go build sprayandpray.go
 
 youvegothonks: youvegothonks.go
 	go build youvegothonks.go
